docs(java): LTS별 JEP 계보와 성숙도 시각화
버전 선택 권고와 코드 예제를 제거하고, Microsoft Build EOS 표와 핵심 JEP의 preview·incubator·final 계보를 중심으로 문서를 재구성합니다.\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>